# ode

./: .gitignore  LICENSE  README.md  TAGS  ctags  ode.cabal  stack.yaml
bench/: BenchODE.hs
src/Data/Array/Repa/: Util.hs
src/Data/Vector/: Util.hs
src/Numeric/: ODE.hs
src/Numeric/ODE/: BS.hs  Exceptions.hs  ModifiedMidpoint.hs  ODEInt.hs  RK4.hs  RKCK.hs  RKQS.hs  Stepper.hs  Util.hs
test/Numeric/ODE/: CosSpec.hs  SepODESpec.hs
